# LocalMemOS

./: .gitignore  Cargo.toml  README.md
.github/workflows/: locomo-full-gate.yml
crates/memory-core/: Cargo.toml
crates/memory-core/src/: error.rs  fts.rs  lib.rs  model.rs  request.rs  schema.rs  store.rs
crates/memory-core/tests/: fts_fallback.rs  history_fact.rs  namespace_isolation.rs  recall_fact.rs  upsert_fact.rs
crates/memory-http/: Cargo.toml
crates/memory-http/src/: lib.rs  main.rs  routes.rs  state.rs
crates/memory-http/tests/: http_smoke.rs
crates/memory-node/: Cargo.toml
crates/memory-node/src/: lib.rs
docs/superpowers/briefs/: 2026-03-18-local-agent-memory-dev-brief.md
docs/superpowers/plans/: 2026-03-18-local-agent-memory-implementation-plan.md  2026-03-18-v1-1-usability-getting-started-implementation-plan.md  2026-03-18-v1-2-usability-clean-run-troubleshooting-implementation-plan.md  2026-03-18-v1-readme-polish-implementation-plan.md  2026-03-19-v1-0-0-release-closure-implementation-plan.md  2026-03-19-v1-4-command-drift-guard-implementation-plan.md  (+20 more)
python/: Cargo.toml  pyproject.toml
python/memory_sdk/: client.py  models.py
python/src/: lib.rs
python/tests/: test_sdk_core.py
tools/locomo/: README.md  assert-hit-threshold.py  assert-locomo-drift.py  assert-locomo-thresholds.py  baseline-guardrails-k5.json  baseline.sh  evaluate-single-knob.py  export-failure-samples.py  failure-samples-k5.json  official-like-eval.sh  qa-proxy.sh  refresh-failure-samples.sh  run-category-gate.sh  run-full-gate.sh  run-regression-gate.sh
(+42 files in other folders)
