[package]
name = "memory-sdk-native"
version = "0.1.0"
edition = "2021"

[lib]
name = "_memory_sdk"
crate-type = ["cdylib"]

[dependencies]
memory-core = { path = "../crates/memory-core" }
pyo3 = { version = "0.22", features = ["extension-module"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }

[workspace]
