[package]
name = "memory-http"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
memory-core = { path = "../memory-core" }

[dev-dependencies]
tower = "0.5"
