[package]
name = "memory-node"
version = "0.1.0"
edition = "2021"
authors = ["localmemos"]

[lib]
name = "memory_node"
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", default-features = false, features = ["napi8"] }
napi-derive = "2"
memory-core = { path = "../memory-core" }
serde_json = "1"
serde = { version = "1", features = ["derive"] }

[build-dependencies]
napi-build = "2"
